--- a/index.html
+++ b/index.html
@@ -5,52 +5,55 @@
   <title>CB Interactive Color Grid</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
   <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-    }
-    canvas {
-      display: block;
-    }
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
   </style>
 </head>
 <body>
-  <script>
-    let gridSize; // Size of each square in the grid
-    let color1, color2;
+<script>
+let gridSize;
+let color1, color2;
 
-    function setup() {
-      createCanvas(windowWidth, windowHeight); // Fullscreen canvas
-      color1 = color('#6B3E24'); // Initial color 1
-      color2 = color('#1D2058'); // Initial color 2
-      noStroke();
+function setup() {
+  createCanvas(windowWidth, windowHeight); // Fullscreen canvas
+  // Initial colors
+  color1 = color('#6B3E24');
+  color2 = color('#1D2058');
+  noStroke();
+}
+
+function draw() {
+  background(255); // Clear background
+  
+  // Set gridSize based on mouseY (using a minimum of 1 to avoid too many iterations)
+  gridSize = constrain(mouseY, 1, 1000);
+  
+  // Pre-calculate rows and columns
+  const cols = ceil(width / gridSize);
+  const rows = ceil(height / gridSize);
+  
+  // Loop over grid cells using indices (fewer iterations than stepping by gridSize)
+  for (let j = 0; j < rows; j++) {
+    for (let i = 0; i < cols; i++) {
+      // Alternate colors based on cell index parity
+      const currentColor = ((i + j) % 2 === 0) ? color1 : color2;
+      fill(currentColor);
+      rect(i * gridSize, j * gridSize, gridSize, gridSize);
     }
+  }
+}
 
-    function draw() {
-      gridSize = mouseY; // Grid size is based on the mouse's vertical position
-      gridSize = constrain(gridSize, 0.5, 1000); // Constrain the grid size to reasonable values
+function keyPressed() {
+  // When 'C' or 'c' is pressed, choose two new random colors
+  if (key === 'c' || key === 'C') {
+    color1 = color(random(255), random(255), random(255));
+    color2 = color(random(255), random(255), random(255));
+  }
+}
 
-      for (let y = 0; y < height; y += gridSize) {
-        for (let x = 0; x < width; x += gridSize) {
-          // Alternate colors based on grid position
-          let currentColor = (int(x / gridSize) + int(y / gridSize)) % 2 === 0 ? color1 : color2;
-          fill(currentColor);
-          rect(x, y, gridSize, gridSize);
-        }
-      }
-    }
-
-    function keyPressed() {
-      if (key === 'c' || key === 'C') {
-        // Change colors randomly when 'C' is pressed
-        color1 = color(random(255), random(255), random(255));
-        color2 = color(random(255), random(255), random(255));
-      }
-    }
-
-    function windowResized() {
-      resizeCanvas(windowWidth, windowHeight); // Adjust canvas size dynamically
-    }
-  </script>
+function windowResized() {
+  resizeCanvas(windowWidth, windowHeight); // Adjust canvas on resize
+}
+</script>
 </body>
 </html>
